# dbf2sql

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PROJECT_RESTRUCTURING_SUMMARY.md  README.md  install.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
scripts/: convert.bat  convert.sh  diagnostic.py  example_usage.py  install_unix.py  install_user.py  install_windows.bat  install_windows_user.bat  uninstall_unix.py
src/dbf2sql/: __init__.py  cli.py  converter.py  dbfread.pyi
tests/: __init__.py
